      between collections uses this code to give well-defined matches
      for all cases.
    * Rollbacks are now listed with the most recent on top
    * Troves which a group operation tries to remove will be left behind
      if they satisfy dependencies for other troves
    * updateall command respects pins on top-level troves
    * Dependency resolution no longer blows away pinned troves

  o Build Changes (cvc)
    * cvc more reliably sets a non-zero exit status when an error
      occurs. (bugzilla #312)
    * Building groups w/ autoResolve displays the revision of the
      troves which are being included
    * The change to automatically split up hardlink groups into
      per-directory hardlink groups has been reverted.  Instead,
      Conary enforces that link groups do not cross directories, but
      provides an exception mechanism for the rare cases where it is
      appropriate to do so.  The old LinkCount policy was renamed
      LinkType, and the new policy enforcing link group directory
      counting is now called LinkCount.
    * The NormalizeCompression policy no longer causes an error if you
      have two files in the filesystem that differ only by the .gz or
      .bz2 extension.
    * The Provides policy will not longer automatically provide soname
      dependencies for executable files that provide sonames.  A few
      executables do provide sonames, and 0.70.1 provided them as
      harmless extraneous provisions.

   o Repository Changes
     * A new getConaryUrl() method has been implemented to support the
       "conary update-conary" feature
     * Exception handling has been re-worked.  All exception classes
       that are marshaled back to the client are now in the
       repository.errors module.  Some of the most commonly used
       exception classes have been included in their previous modules
       for compatibility until code can be modified to use the new
       repository.errors module.

Changes in 0.70.1: